# LeafNothingBehind

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: flake.yaml  mypy.yaml  pylint.yaml  ruff.yaml
clem_pipeline/: training.py  utils.py
clem_pipeline/models/: custom_models.py  s1_unet.py
config/: default.yaml  models.yaml
config/aluminium/: base.yaml
config/berylium/: base.yaml
config/cloud_models/: Nimbostratusv6.yaml  mlcloud.yaml
config/cloud_models/aluminium/: base.yaml
config/cloud_models/lithium/: base.yaml
config/cloud_models/scandium/: Nimbostratusv6.yaml  human.yaml  mlcloud.yaml  mlcloud_basic.yaml
config/cloud_models/strontium/: altostratus.yaml  mlcloud.yaml  mlcloud_01.yaml  mlcloud_basic.yaml  mlcloud_basic_01.yaml
config/cloud_models/titanium/: base.yaml
config/cloud_models/vanadium/: base.yaml
config/cloud_models/yttrium/: base.yaml
config/exps/: scandium.yaml  scandium_weather.yaml  strontium.yaml  titanium.yaml  vanadium.yaml
config/hassium/: base.yaml
config/hydrogen/: base.yaml
config/lithium/: base.yaml
config/magnesium/: base.yaml
config/manganese/: base.yaml
config/model/: aluminium.yaml  manganese.yaml  scandium.yaml  scandium_weather.yaml  sodium.yaml  strontium.yaml  titanium.yaml  vanadium.yaml
config/resunet/: base.yaml
config/rhodium/: base.yaml
config/scandium/: base.yaml  cloud_removal.yaml  exp1.yaml  exp_scan.yaml
config/scandium_cloud/: human.yaml
config/sodium/: base.yaml
config/strontium/: base.yaml
config/titanium/: base.yaml
config/vanadium/: base.yaml  exp.yaml
config/yttrium/: base.yaml
core/: dataset.py  metrics.py  resunet.py  train.py
csv/: meteo_full.csv  test_s2_difference.csv  train_cloudy.csv  train_regular.csv  train_regular_grids.csv  validation_mask_cloudy.csv  validation_regular.csv  validation_s2_difference.csv
data/: dataloader.ipynb  dataloader.py  extract.py  read.py
github_actions_utils/: __init__.py  color.py  pylint_manager.py
lnb/: __init__.py  train.py
lnb/architecture/: __init__.py  cloud_models.py  models.py  modules.py  molecule.py
lnb/architecture/resunet/: __init__.py  modules.py  (+1 more)
lnb/config/: scandium.yaml
lnb/data/: __init__.py  create_grids.py  dataloader.ipynb  dataloader.py  dataset.py  meteo.py  split.py  splitter.py  splitter_utils.py
lnb/training/: __init__.py  aluminium.py  berylium.py  hassium.py  hydrogen.py  lithium.py  log_utils.py  magnesium.py  manganese.py  metrics.py  molecule.py  resunet.py  rhodium.py  scandium.py  sodium.py  strontium.py  titanium.py  trainer.py  vanadium.py  yttrium.py
lnb/visualization/: __init__.py  main.ipynb  main.py
lnb/yaecs_config/: __init__.py  config.py
segmentation_models.pytorch/: HALLOFFAME.md
visualization/: main.ipynb  main.py
(+37 files in other folders)
